création du formulaire

--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -13,4 +13,13 @@
         </div>
     {% endfor %}
 
+
+    {{ form_start(form) }}
+    {{ form_row(form.title) }}
+    <button type="submit" name="btnSearch">Rechercher</button>
+    {{ form_end(form) }}
+
+
+
+
 {% endblock %}
