Lier un formulaire à une entité.

--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -14,11 +14,11 @@
     {% endfor %}
 
 
-    {{ form_start(form) }}
-    {{ form_row(form.title) }}
-    <button type="submit" name="btnSearch">Rechercher</button>
-    {{ form_end(form) }}
 
+    {{ form_start(form) }}
+    {{ form_row(form.name) }}
+    <button class="btn">{{ button_label|default('Save') }}</button>
+    {{ form_end(form) }}
 
 
 
