modif du formulaire

--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -14,7 +14,11 @@
     {% endfor %}
 
 
-
+    {{ form_start(form) }}
+    {{ form_row(form.title) }}
+    {{ form_row(form.category) }}
+    <button type="submit" name="btnSearch">Rechercher</button>
+    {{ form_end(form) }}
 
 
 
