--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -20,6 +20,7 @@
 
     {{ form_start(form) }}
     {{ form_row(form.name) }}
+    {{ form_row(form.category) }}
     <button class="btn">{{ button_label|default('Save') }}</button>
     {{ form_end(form) }}
 
