--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -2,14 +2,16 @@
 
 {% block title %}Index{% endblock %}
 
-{% block stylesheets %}{% endblock %}
+{% block stylesheets %}
+    {{ encore_entry_link_tags('app') }}
+{% endblock %}
 
 {% block body %}
     <h1>All articles from article s table : </h1>
     {% for article in articles %}
         <div>
             <h2>{{ loop.index }} / {{ article.title }} - Category : {{ article.category.name }}</h2>
-            <p>{{ article.content }}</p>
+            <p class="italic">{{ article.content }}</p>
         </div>
     {% endfor %}
 
