--- a/templates/lucky/number.html.twig
+++ b/templates/lucky/number.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
-
+{% block stylesheets %}
+    {{ encore_entry_link_tags('app') }}
+{% endblock %}
 {% block title %}Hello {{ controller_name }}!{% endblock %}
 
 {% block body %}
